--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -5,6 +5,7 @@
 \documentclass[runningheads]{llncs}
 %
 \usepackage{graphicx}
+\usepackage{dirtytalk}
 \graphicspath{ {./img/} }
 
 % copy the file from this repo
@@ -47,22 +48,23 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 %
 \section{Introduction}
-From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{BitcoinSatoshi}, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of general purpose smart contracts introduced by Ethereum \cite{Ethereum-Wood}.
-Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the proof of existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to 'scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
+Since the birth of Bitcoin\cite{BitcoinSatoshi} in 2008 as a peer-to-peer electronic cash system, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of general purpose smart contracts introduced by Ethereum \cite{Ethereum-Wood}.
+Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a `game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a `blockchainified science'\cite{BlockchainforScience} could `reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to `scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
 \newline A thorny issue in the academic system that can - and should - be tackled by blockchain concerns the status and accreditation of peer-review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
 In this paper we propose a solution to the problem of reviewers recognition based on the principles of tokenomics \cite{TokenEcon} and in line with the values of open science.
 
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
-Peer review is still the only quality control mechanism devoted to evaluating scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
-\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is centralized around the publisher's editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
-\subsubsection{Lack of recognition and incentives.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
-\subsubsection{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review} \cite{PeerRev-NatComm}.
+Peer review is still the only quality control mechanism devoted to evaluating scientific outcomes. The purpose of peer review is \say{improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism.} \cite{Gropp-PeerRevStress}. However, the system is `ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
+\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is centralized around the publisher's editor(s). The author(s) submit the manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
+\subsubsection{Lack of recognition and incentives.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the impact factor of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to `give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
+\subsubsection{Fraud and misconduct.} Due to the `publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review} \cite{PeerRev-NatComm}.
 \subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision \cite{Tennant2017-F1000R}, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (the identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
-\subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?" \cite{Tennant2017-F1000R}.
+\subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: \say{Who watches the watchers?} \cite{Tennant2017-F1000R}.
 \subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journal publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers,Warne-RewRev}.
-
-\subsection{Related work} Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials \cite{Tennant2017-F1000R} where performance, though, is assessed only in terms of quantity of reviews but not quality \cite{Warne-RewRev}.
+\\
+\\
+Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual `badges', certificates of performance, citation in annual editorials \cite{Tennant2017-F1000R} where performance, though, is assessed only in terms of quantity of reviews but not quality \cite{Warne-RewRev}.
 \newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.} provides a free metric service for track, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
 
 \section{System concept}
@@ -72,12 +74,12 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 
 \subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, units of values registered on the blockchain. In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. Thus, the system acts also as a reputation builder.
 
-\subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
+\subsubsection{Transparency and re-usability of the records.} The peer-review history, including reviewers' recommendations and authors' replies, should be openly and permanently accessible to the community (in the form of `open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in `cascading' or `portable peer-reviews').
 
-\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflicts of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remains unaltered and indelible. This notarization process is called proof of existence (PoE) and allows manual verification of the existence of the document.
-\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and zero-knowledge proof, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
+\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflicts of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remains unaltered and indelible. This notarization process is called Proof of Existence (PoE) and allows manual verification of the existence of the document.
+\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and Zero-Knowledge Proof, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
 
-\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing by abolishing the editorial selection process through 'open participation' (or 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing by abolishing the editorial selection process through `open participation' (or `open interaction', `open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 \subsection{Implementation}
 
@@ -112,39 +114,44 @@ AntsReview (see Figure \ref{fig:contracts} (\textbf{a})), the core of the smart 
 \end{itemize}
  Alice or the issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
  Anters (contributors) can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send. 
- \newline Bob (peer-reviewer) can download the files relative to Alice's paper and the requirements of the peer review by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer review with the function \emph{updateReview()} by uploading the new version on IPFS. 
- \newline Ted (approver) can accept the peer review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
+\\
+Bob (peer-reviewer) can download the files relative to Alice's paper and the requirements of the peer review by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer review with the function \emph{updateReview()} by uploading the new version on IPFS. 
+\\
+Ted (approver) can accept the peer review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
 If Alice's AntReview does not receive any peer review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
-
+\\
+\\
 Access management of the Ants-Review protocol is defined and controlled by \emph{AntsReviewRoles} (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:} https://openzeppelin.com.} that is used to define the Issuer and Peer-Reviewer Roles. AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, granted by default to the owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC Protocol \cite{AZTEC}'s security layer.
 
 \paragraph{\textbf{Pseudo-anonymity}.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan \footnote[11]{\emph{Etherscan}. \textsc{URL:} https://etherscan.io/.}) and are subject to data mining that could extract value and identify users in the blockchain.
-\paragraph{\textbf{Private transactions}.}AZTEC Protocol was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[12]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK} proofs, a universal zkSNARK construction that reduces gas costs and improves scalability.
+\paragraph{\textbf{Private transactions}.}AZTEC Protocol was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (zk-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[12]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. zk-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}, a universal zk-SNARK construction that reduces gas costs and improves scalability.
 
 \subsubsection{Tokenomics}
 Ants-Review integrates a few \emph{ERC20}\footnote[13]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (issuer and reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[14]{\emph{EIP  1724}.\textsc{URL:} https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
-
-\subsubsection{State of Art} The current state-of-the-art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
+A Faucet (see Figure \ref{fig:contracts}, (\text{d}) is implemented to distribute ANTS token on Kovan Testnet for testing purposes.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{e})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents of the protocol, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[14]{\emph{EIP  1724}.\textsc{URL:} https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
+\\
+\\
+The current state-of-the-art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
 \section{Discussions}
-We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); the social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers through the creation of the community of Anters. 
+We have described how Ants-Review protocol can solve the limitations of the current peer review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see §AntsReview in 3.2); the social and cognitive biases via anonymity granted by AZTEC Protocol (see §Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers through the creation of the community of Anters. 
 \subsection{Future developments}
 An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[15]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:} https://compound.finance.}, to cite a few.
 Therefore, an ERC20 \emph{pool token} would be automatically released by the protocol, representing the accrued interest on the Anters' stake over time that can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) \cite{Wang-DAO,DAOContr} could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, a protocol upgrade inspired by \emph{Discover} \footnote[18]{\emph{Discover.sol}. \textsc{URL:}\newline https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.}, a web3 browser by \emph{Status} \footnote[19]{\emph{Status}.\textsc{URL:} https://status.im/.} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
+\newline Finally, a protocol upgrade inspired by \emph{Discover}\footnote[18]{\emph{Discover.sol}. \textsc{URL:}\newline https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.}, a Web3 browser by \emph{Status}\footnote[19]{\emph{Status}.\textsc{URL:} https://status.im/.} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
-As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). Recently, pre-print servers, such as arXiv and biorXiv, started integrating peer-review services into their platforms: \emph{PREreview} \footnote[20]{\emph{PREreview.}  \textsc{URL:} https://www.prereview.org}, \emph{PeerCommunityIn.} \footnote[21]{\emph{PeerCommunityIn} \textsc{URL:} https://peercommunityin.org}, \emph{Review Commons} \footnote[22]{\emph{Review Commons.} \textsc{URL:} https://www.reviewcommons.org}, \emph{PrePrint Review} \footnote[23]{\emph{PrePrint Review.} \textsc{URL:} https://elifesci.org/preprint-review} and the previously mentioned \emph{Peerage of Science}. This dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by those alternative peer-review platforms and justify their added value (\emph{ibidem}). In our proposal we also decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process requires a standard for peer-reviews \cite{UPR}: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[24]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might accelerate this novel process of standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
+As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). Recently, pre-print servers, such as \emph{arXiv} and \emph{biorXiv}, started integrating peer-review services into their platforms: \emph{PREreview}\footnote[20]{\emph{PREreview.}  \textsc{URL:} https://www.prereview.org}, \emph{PeerCommunityIn.}\footnote[21]{\emph{PeerCommunityIn} \textsc{URL:} https://peercommunityin.org}, \emph{Review Commons}\footnote[22]{\emph{Review Commons.} \textsc{URL:} https://www.reviewcommons.org}, \emph{PrePrint Review}\footnote[23]{\emph{PrePrint Review.} \textsc{URL:} https://elifesci.org/preprint-review} and the previously mentioned \emph{Peerage of Science}. This dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by those alternative peer-review platforms and justify their added value (\emph{ibidem}). In our proposal we also decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer reviews: peer reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process requires a standard for peer-reviews \cite{UPR}: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[24]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer reviews might accelerate this novel process of standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
-In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
+In this paper we addressed a crucial problem within scholarly academic communication: the peer review process. We have shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
 
 
 \subsubsection{Supplementary Material}
