--- a/samplepaper.tex
+++ b/samplepaper.tex
@@ -11,6 +11,7 @@
 % If you use the hyperref package, please uncomment the following line
 % to display URLs in blue roman font according to Springer's eBook style:
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
+\usepackage{dirtytalk}
 
 \begin{document}
 %
